--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -8,18 +8,19 @@
 }
 
 .input-form {
-  padding: 10px;
   display: flex;
   flex-direction: column;
   max-width: 400px;
   min-width: 400px;
+  max-height: 400px;
+  min-height: 400px;
   background-color: white;
   border: 1px solid black;
   border-radius: 5px;
 }
 
 mat-form-field {
-  padding-bottom: 10px;
+  padding: 10px;
 }
 
 .submit-button {
